// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UiPath Options Render integration selector 1`] = `
<div>
  <div>
    <div
      class="formGroup form-group row"
    >
      <label
        class="label form-label col-form-label col-xl-2 col-lg-3"
        for="extension.blockPipeline.0.config.uipath"
      >
        Integration
      </label>
      <div
        class="col-xl-10 col-lg-9"
      >
        <div
          class="d-flex"
        >
          <div
            class="flex-grow-1"
          >
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1s2u09g-control"
              >
                <div
                  class=" css-319lph-ValueContainer"
                >
                  <div
                    class=" css-14el2xx-placeholder"
                    id="react-select-2-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class=" css-6j8wv5-Input"
                    data-value=""
                  >
                    <input
                      aria-autocomplete="list"
                      aria-describedby="react-select-2-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class=""
                      id="extension.blockPipeline.0.config.uipath"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="extension.blockPipeline.0.config.uipath"
                type="hidden"
                value=""
              />
            </div>
          </div>
          <div>
            <button
              class="btn btn-info"
              title="Refresh configured integrations"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sync fa-w-16 "
                data-icon="sync"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <small
          class="text-muted form-text"
        >
          <span>
            A configured integration.
             
            <a
              href="moz-extension://8b413e68-1e0d-4cad-b98e-1eb000799783/options.html#/services"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-cloud fa-w-20 "
                data-icon="cloud"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4z"
                  fill="currentColor"
                />
              </svg>
               Configure additional integrations on the Integrations page
            </a>
          </span>
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`UiPath Options Render with selected dependency 1`] = `
<div>
  <div>
    <div
      class="formGroup form-group row"
    >
      <label
        class="label form-label col-form-label col-xl-2 col-lg-3"
        for="extension.blockPipeline.0.config.uipath"
      >
        Integration
      </label>
      <div
        class="col-xl-10 col-lg-9"
      >
        <div
          class="d-flex"
        >
          <div
            class="flex-grow-1"
          >
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1s2u09g-control"
              >
                <div
                  class=" css-319lph-ValueContainer"
                >
                  <div
                    class=" css-14el2xx-placeholder"
                    id="react-select-3-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class=" css-6j8wv5-Input"
                    data-value=""
                  >
                    <input
                      aria-autocomplete="list"
                      aria-describedby="react-select-3-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class=""
                      id="extension.blockPipeline.0.config.uipath"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="extension.blockPipeline.0.config.uipath"
                type="hidden"
                value=""
              />
            </div>
          </div>
          <div>
            <button
              class="btn btn-info"
              title="Refresh configured integrations"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sync fa-w-16 "
                data-icon="sync"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <small
          class="text-muted form-text"
        >
          <span>
            A configured integration.
             
            <a
              href="moz-extension://8b413e68-1e0d-4cad-b98e-1eb000799783/options.html#/services"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-cloud fa-w-20 "
                data-icon="cloud"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 640 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4z"
                  fill="currentColor"
                />
              </svg>
               Configure additional integrations on the Integrations page
            </a>
          </span>
        </small>
      </div>
    </div>
    <div
      class="formGroup form-group row"
    >
      <label
        class="label form-label col-form-label col-xl-2 col-lg-3"
        for="extension.blockPipeline.0.config.releaseKey"
      >
        Release
      </label>
      <div
        class="col-xl-10 col-lg-9"
      >
        <div
          class="d-flex"
        >
          <div
            class="flex-grow-1"
          >
            <div
              class="text-danger"
            >
              Error loading options: 
              No integration configured
            </div>
          </div>
          <div>
            <button
              class="btn btn-info"
              title="Refresh"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sync fa-w-16 "
                data-icon="sync"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <small
          class="text-muted form-text"
        >
          <span>
            The UiPath release/process
          </span>
        </small>
      </div>
    </div>
    <div
      class="formGroup form-group row"
    >
      <label
        class="label form-label col-form-label col-xl-2 col-lg-3"
        for="extension.blockPipeline.0.config.strategy"
      >
        Strategy
      </label>
      <div
        class="col-xl-10 col-lg-9"
      >
        <div
          class="root"
        >
          <div
            class="field"
          >
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-5-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1s2u09g-control"
              >
                <div
                  class=" css-319lph-ValueContainer"
                >
                  <div
                    class=" css-qc6sy-singleValue"
                  >
                    JobsCount
                  </div>
                  <div
                    class=" css-6j8wv5-Input"
                    data-value=""
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class=""
                      id="extension.blockPipeline.0.config.strategy"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                      />
                    </svg>
                  </div>
                  <span
                    class=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="dropdown dropdown"
            data-test-selected="Select..."
            data-testid="toggle-extension.blockPipeline.0.config.strategy"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-link"
              type="button"
            >
              <span
                class="symbol"
              >
                <test-file-stub
                  classname="root"
                />
              </span>
            </button>
          </div>
        </div>
        <small
          class="text-muted form-text"
        >
          <span>
            How the process should be run
          </span>
        </small>
      </div>
    </div>
    <div
      class="formGroup form-group row"
    >
      <label
        class="label form-label col-form-label col-xl-2 col-lg-3"
        for="extension.blockPipeline.0.config.jobsCount"
      >
        Jobs Count
      </label>
      <div
        class="col-xl-10 col-lg-9"
      >
        <div
          class="root"
        >
          <div
            class="field"
          >
            <input
              class="form-control"
              id="extension.blockPipeline.0.config.jobsCount"
              step=""
              type="number"
              value="1"
            />
          </div>
          <div
            class="dropdown dropdown"
            data-test-selected="Number"
            data-testid="toggle-extension.blockPipeline.0.config.jobsCount"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-link"
              type="button"
            >
              <span
                class="symbol"
              >
                <test-file-stub
                  classname="root"
                />
              </span>
            </button>
          </div>
        </div>
        <small
          class="text-muted form-text"
        >
          <span>
            When using strategy JobsCount, the process will run x times where x is the value of the JobsCount field.
          </span>
        </small>
      </div>
    </div>
    <div
      class="formGroup form-group row"
    >
      <label
        class="label form-label col-form-label col-xl-2 col-lg-3"
        for="extension.blockPipeline.0.config.awaitResult"
      >
        Await Result
      </label>
      <div
        class="col-xl-10 col-lg-9"
      >
        <div
          class="root"
        >
          <div
            class="field"
          >
            <div
              class="switch btn off btn-light"
            >
              <div
                class="switch-group"
              >
                <span
                  class="switch-on btn btn-primary"
                >
                   
                </span>
                <span
                  class="switch-off btn btn-light"
                >
                   
                </span>
                <span
                  class="switch-handle btn btn-light"
                />
              </div>
            </div>
          </div>
          <div
            class="dropdown dropdown"
            data-test-selected="Toggle"
            data-testid="toggle-extension.blockPipeline.0.config.awaitResult"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-link"
              type="button"
            >
              <span
                class="symbol"
              >
                <test-file-stub
                  classname="root"
                />
              </span>
            </button>
          </div>
        </div>
        <small
          class="text-muted form-text"
        >
          <span>
            Wait for the process to complete and output the results.
          </span>
        </small>
      </div>
    </div>
    <div
      class="formGroup form-group row"
    >
      <div
        class="col-xl-12 col-lg-12"
      >
        <div
          class="card"
        >
          <div
            class="card-header"
          >
            Input Arguments
          </div>
          <div
            class="card-body"
          >
            <div>
              <table
                class="mb-0 table table-sm"
              >
                <thead>
                  <tr>
                    <th
                      scope="col"
                    >
                      Property
                    </th>
                    <th
                      scope="col"
                    >
                      Value
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
              <button
                class="btn btn-primary"
                type="button"
              >
                Add Property
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
